GGB-2386 ensure min width so that gear icon is visible
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@62092 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
@@ -8,7 +8,9 @@
 	}
 	
 	.MatTitleBarPanelContent {
-		box-shadow:none;	
+		min-width: 48px;
+		min-height: 48px;
+		box-shadow:none;
 		padding: 0px;
 		background-color: transparent;
 	}
